<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.telkom.weedu.view.login.LoginActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/ln_main_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/label_register"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/rounded_background_white_line_transparent"
                android:drawableLeft="@drawable/ic_form_person"
                android:drawablePadding="@dimen/activity_vertical_margin"
                android:hint="@string/hint_fullname"
                android:paddingBottom="12dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="12dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/edt_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/rounded_background_white_line_transparent"
                android:drawableLeft="@drawable/ic_form_phone"
                android:drawablePadding="@dimen/activity_vertical_margin"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:paddingBottom="12dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="12dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/edt_dateofbirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/rounded_background_white_line_transparent"
                android:drawableLeft="@drawable/ic_form_calendar"
                android:drawablePadding="@dimen/activity_vertical_margin"
                android:editable="false"
                android:hint="@string/hint_date_of_birth"
                android:inputType="none"
                android:paddingBottom="12dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="12dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/rounded_background_white_line_transparent"
                android:drawableLeft="@drawable/ic_form_email"
                android:drawablePadding="@dimen/activity_vertical_margin"
                android:hint="@string/hint_current_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="12dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="12dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="13sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleContentDescription="@string/message_password_not_valid"
                app:passwordToggleTint="@color/white">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:background="@drawable/rounded_background_white_line_transparent"
                    android:drawableLeft="@drawable/ic_form_password"
                    android:drawablePadding="@dimen/activity_vertical_margin"
                    android:drawableStart="@drawable/ic_form_password"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingBottom="12dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingTop="12dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="13sp" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/cb_toc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:buttonTint="@color/colorWhite"
                android:gravity="left"
                android:text="@string/label_toc"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/btn_rounded_background_white"
                android:text="@string/label_register" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/ln_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_have_account_to_login"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</RelativeLayout>


