...
    <string name="label_toc">Saya telah membaca dan menyetujui syarat dan ketentuan yang berlaku</string>
    <string name="label_have_account_to_login">Already have account ? Login here</string>
    <string name="label_need_to_register">Don\'t have an account ? Register here</string>
    <string name="label_buat_edumail">Buat Edumail</string>
    <string name="label_email_suggestion">Saran email lain</string>
    <string name="label_ask_for_other_email">Minta saran lain</string>
    <string name="activity_title_confirmation">Confirmation</string>
    <string name="hint_write_your_message">Tulis pesan anda disini . . .</string>
    <string name="label_what_you_need">Apa yang anda Butuhkan?</string>
    <string name="btn_send">Kirim</string>
    <string name="sample_version">version 1.0.0</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
...
    <string name="trash">Trash</string>
    <string name="penulis">Penulis</string>
    <string name="penerbit">Penerbit</string>
    <string name="isbn">ISBN</string>
    <string name="bahasa">Bahasa</string>
    <string name="beli">Beli</string>
    <string name="message_terms_condition">You need to accept the terms and condition to complete the registration</string>
    <string name="label_email_edumail">\@edumail.id</string>
    <string name="tab_draft">Draft</string>
    <string name="tab_trash">Trash</string>
    <string name="label_author">Penulis</string>
    <string name="label_publisher">Penerbit</string>
    <string name="label_isbn">ISBN</string>
...
